Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11
Description
Further to MDEV-18496, there are still various cases where the server crashes/asserts when Aria encryption is enabled/used, but the plugin is not loaded. This bug will list only crashes/asserts. For "Unknown key id 1" and similar corruption errors, see MDEV-24640 instead.
Individual testcases/crashes/asserts listed in comments below.
Attachments
Issue Links
- relates to
-
MDEV-18496 Crashes, asserts, errors and hangs when Aria encryption is enabled/used, but plugin is not loaded
-
- Closed
-
-
MDEV-24640 ALTER on Aria table with aria_encrypt_tables=ON without encryption plugin corrupts table
-
- Closed
-